...
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo">App Logo</string>
    <string name="forgot_password">Forgot Password…</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait…</string>

    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_account">My account</string>
    <string name="fullname">Full name</string>
    <string name="profile_image">Profile Image</string>
...
